--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "noImplicitAny": false,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "noEmit": false,
     "jsx": "react",
     "outDir": "./lib"
   },
