--- a/package.json
+++ b/package.json
@@ -1,20 +1,8 @@
 {
-  "name": "react-editable-table",
-  "version": "0.1.0",
-  "private": true,
+  "name": "react-edit-table",
+  "version": "0.1.1-experimental.3",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^25.2.1",
-    "@types/node": "^13.13.5",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
-    "lodash.clonedeep": "^4.5.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "typescript": "^3.8.3"
+    "lodash.clonedeep": "^4.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,6 +15,12 @@
     "prepublish": "npm run dist && npm run lib",
     "examples": "start-storybook -p 9009 -s public"
   },
+  "authors": [
+    {
+      "name": "weber-cd",
+      "email": "weber.cd@foxmail.com"
+    }
+  ],
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -54,11 +48,20 @@
     "@storybook/addons": "^5.3.18",
     "@storybook/preset-create-react-app": "^2.1.1",
     "@storybook/react": "^5.3.18",
+    "@types/node": "^13.13.5",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1",
+    "typescript": "^3.8.3",
     "commitizen": "^4.1.2",
     "cz-customizable": "^6.2.0",
     "node-sass": "^4.14.1",
     "react-docgen-typescript-loader": "^3.7.2",
     "ts-loader": "^7.0.4",
     "webpack-cli": "^3.3.11"
-  }
+  },
+  "homepage": "https://github.com/weber-cd/react-edit-table",
+  "main": "lib/index.js"
 }
