--- a/package.json
+++ b/package.json
@@ -5,16 +5,12 @@
     "lodash.clonedeep": "^4.5.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
     "commit": "git-cz",
-    "eject": "react-scripts eject",
     "dist": "webpack",
     "lib": "npx babel ./src  --out-dir ./lib --config-file ./babel.config.js --extensions '.ts,.tsx' --copy-files",
     "prepublish": "npm run dist && npm run lib",
-    "examples": "start-storybook -p 9009",
-    "build-storybook": "build-storybook -o docs"
+    "examples": "start-storybook -p 6006",
+    "docs": "build-storybook -c .storybook -o docs"
   },
   "authors": [
     {
@@ -44,23 +40,26 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@storybook/addon-actions": "^5.3.18",
-    "@storybook/addon-links": "^5.3.18",
-    "@storybook/addons": "^5.3.18",
-    "@storybook/preset-create-react-app": "^2.1.1",
-    "@storybook/react": "^5.3.18",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-typescript": "^7.9.0",
+    "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-links": "^5.3.19",
+    "@storybook/addons": "^5.3.19",
+    "@storybook/react": "^5.3.19",
     "@types/node": "^13.13.5",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "typescript": "^3.8.3",
+    "babel-loader": "^8.1.0",
     "commitizen": "^4.1.2",
     "cz-customizable": "^6.2.0",
     "node-sass": "^4.14.1",
+    "react": "^16.13.1",
     "react-docgen-typescript-loader": "^3.7.2",
+    "react-dom": "^16.13.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
     "ts-loader": "^7.0.4",
+    "typescript": "^3.8.3",
     "webpack-cli": "^3.3.11"
   },
   "homepage": "https://github.com/weber-cd/react-edit-table",
