--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-edit-table",
-  "version": "0.1.2",
+  "version": "0.1.1-experimental.4",
   "dependencies": {
     "lodash.clonedeep": "^4.5.0"
   },
